@@ -3,24 +3,25 @@ package uk.gov.hmcts.reform.civil.handler.callback.camunda.dashboardnotification
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
-import uk.gov.hmcts.reform.civil.callback.CaseProgressionDashboardCallbackHandler;
+import uk.gov.hmcts.reform.civil.callback.CaseEventsDashboardCallbackHandler;
 import uk.gov.hmcts.reform.civil.client.DashboardApiClient;
-import uk.gov.hmcts.reform.civil.enums.CaseState;
-import uk.gov.hmcts.reform.civil.handler.callback.camunda.dashboardnotifications.DashboardScenarios;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.service.DashboardNotificationsParamsMapper;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 
-import java.util.Collections;
 import java.util.List;
 
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CREATE_DASHBOARD_NOTIFICATION_STAY_LIFTED_DEFENDANT;
+import static uk.gov.hmcts.reform.civil.handler.callback.camunda.dashboardnotifications.DashboardScenarios.SCENARIO_AAA6_CP_STAY_LIFTED_DEFENDANT;
+
 @Service
-public class UploadHearingDocumentsDefendantHandler extends CaseProgressionDashboardCallbackHandler {
+public class StayLiftedDefendantNotificationHandler extends CaseEventsDashboardCallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(CaseEvent.CREATE_DASHBOARD_NOTIFICATION_UPLOAD_HEARING_DOCUMENTS_DEFENDANT);
-    private static final String TASK_ID = "CreateUploadHearingDocumentNotificationForDefendant";
+    private static final List<CaseEvent> EVENTS =
+        List.of(CREATE_DASHBOARD_NOTIFICATION_STAY_LIFTED_DEFENDANT);
+    public static final String TASK_ID = "DashboardNotificationStayLiftedDefendant";
 
-    public UploadHearingDocumentsDefendantHandler(DashboardApiClient dashboardApiClient,
+    public StayLiftedDefendantNotificationHandler(DashboardApiClient dashboardApiClient,
                                                   DashboardNotificationsParamsMapper mapper,
                                                   FeatureToggleService featureToggleService) {
         super(dashboardApiClient, mapper, featureToggleService);
@@ -37,14 +38,12 @@ public class UploadHearingDocumentsDefendantHandler extends CaseProgressionDashb
     }
 
     @Override
-    protected String getScenario(CaseData caseData) {
-        return DashboardScenarios.SCENARIO_AAA6_CP_HEARING_DOCUMENTS_UPLOAD_DEFENDANT.getScenario();
+    public String getScenario(CaseData caseData) {
+        return SCENARIO_AAA6_CP_STAY_LIFTED_DEFENDANT.getScenario();
     }
 
     @Override
     public boolean shouldRecordScenario(CaseData caseData) {
-        return caseData.isRespondent1NotRepresented()
-            && CaseState.CASE_PROGRESSION.equals(caseData.getCcdState())
-            && featureToggleService.isCaseProgressionEnabled();
+        return caseData.isRespondent1NotRepresented();
     }
 }
